websocket realtime + proto-json controllers